@@ -2247,6 +2247,9 @@ Peers.column.peer_id.info=Peer ID in readable form
 Peers.column.peer_byte_id=Peer ID
 Peers.column.peer_byte_id.info=Peer ID in byte form
 
+Peers.column.handshake_reserved=Handshake Reserved Bytes
+Peers.column.handshake_reserved.info=Indicates what reserved bits were set in the BT handshake
+
 dht.warn.user=Warn of potential NAT/port mapping problems
 
 ConfigView.label.openbar.incomplete=Download bars: auto open downloads
